[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-agentoracle"
version = "0.1.0"
description = "LangChain integration for AgentOracle — trust verification tools for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "TKCollective"}]
keywords = ["langchain", "agentoracle", "trust", "verification", "ai-agents", "x402"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.2.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://agentoracle.co"
Repository = "https://github.com/TKCollective/x402-research-skill"
Documentation = "https://agentoracle.co"

[tool.setuptools.packages.find]
include = ["langchain_agentoracle*"]
